@@ -1,5 +1,6 @@
 package steps.frontend.brasilbet.Deposit;
 
+import com.mysql.cj.log.Log;
 import database.DatabaseConnection;
 import engine.Driver;
 import io.cucumber.datatable.DataTable;
@@ -13,27 +14,34 @@ import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import pages.PageModelBase;
+import pages.frontend.GeneralDashboard;
+import pages.frontend.brasilbet.Deposit;
+import steps.frontend.Login;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.ResultSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 public class ApproveDeposit {
-    private WebDriver driver;
+    private final WebDriver driver;
     public pages.PageModelBase PageModelBase;
+    public steps.frontend.Login Login;
+    public steps.frontend.Actions Actions;
 
-
-    public ApproveDeposit(PageModelBase PageModelBase, Driver driver) {
+    public ApproveDeposit(steps.frontend.Actions Actions, Driver driver) {
         this.driver = driver.get();
-        this.PageModelBase = PageModelBase;
+        this.Actions = Actions;
 
     }
 
@@ -57,11 +65,13 @@ public class ApproveDeposit {
                     "WHERE trans_id = '"+transId+"'";
 
             System.out.println(query);
-                                            //execB2CDBQuery stage/prod; execProdBrasilQuery prod brasil
-            ResultSet rs = DatabaseConnection.execB2CDBQuery(query);
-            referenceNo = rs.getString("reference_no");
-            amount = rs.getString("amount");
-            created_at = rs.getString("created_at");
+
+            //execB2CDBQuery stage/prod; execProdBrasilQuery prod brasil
+            //buft stands for br_user_fund_transactions
+            ResultSet buft = DatabaseConnection.execB2CDBQuery(query);
+            referenceNo = buft.getString("reference_no");
+            amount = buft.getString("amount");
+            created_at = buft.getString("created_at");
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -70,6 +80,32 @@ public class ApproveDeposit {
         System.out.println("reference_no: " + referenceNo +
                             "\namount: " + amount +
                             "\ncreated_at: " + created_at);
+
+    }
+
+    String deposit_rollover_multiplier;
+    @Given("I get agent product details")
+    public void iGetAgentProductDetails(){
+
+        String wwwl_url = steps.frontend.Login.www_url;
+
+        try {
+            //check report_casino if null stage_b2c
+            String query = " SELECT deposit_rollover_multiplier FROM `stage_b2c`.`agent_products` " +
+                    "WHERE www_url = '"+wwwl_url+"'";
+
+            System.out.println(query);
+
+            //execB2CDBQuery stage/prod; execProdBrasilQuery prod brasil
+            //ap stands for agent_products
+            ResultSet ap = DatabaseConnection.execB2CDBQuery(query);
+            deposit_rollover_multiplier = ap.getString("deposit_rollover_multiplier");
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        System.out.println("deposit_rollover_multiplier: " + deposit_rollover_multiplier);
 
     }
 
@@ -102,7 +138,8 @@ public class ApproveDeposit {
 
         ((JavascriptExecutor) driver).executeScript(scrollElementIntoMiddle, payloadElement);
 
-        WebElement payloadTextArea = wait.until(ExpectedConditions.visibilityOfElementLocated(By.xpath(".//div[contains(concat(' ',@class,' '), ' js-payload ')]//div[contains(concat(' ',@class,' '), ' CodeMirror-code ')]")));
+        WebElement payloadTextArea = wait.until(ExpectedConditions.visibilityOfElementLocated
+                (By.xpath(".//div[contains(concat(' ',@class,' '), ' js-payload ')]//div[contains(concat(' ',@class,' '), ' CodeMirror-code ')]")));
         payloadTextArea.click();
 
         Actions action = new Actions(driver);
@@ -160,13 +197,13 @@ public class ApproveDeposit {
             StringBuilder postData = new StringBuilder();
             for(Map.Entry<String, Object> param : params.entrySet()){
                 if(postData.length() != 0) postData.append('&');
-                postData.append(URLEncoder.encode(param.getKey(), "UTF-8"));
+                postData.append(URLEncoder.encode(param.getKey(), StandardCharsets.UTF_8));
                 postData.append('=');
-                postData.append(URLEncoder.encode(String.valueOf(param.getValue()), "UTF-8"));
+                postData.append(URLEncoder.encode(String.valueOf(param.getValue()), StandardCharsets.UTF_8));
 
             }
 
-            byte[] postDataBytes = postData.toString().getBytes("UTF-8");
+            byte[] postDataBytes = postData.toString().getBytes(StandardCharsets.UTF_8);
 
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("POST");
@@ -175,7 +212,7 @@ public class ApproveDeposit {
             connection.setDoOutput(true);
             connection.getOutputStream().write(postDataBytes);
 
-            Reader in = new BufferedReader(new InputStreamReader(connection.getInputStream(), "UTF-8"));
+            Reader in = new BufferedReader(new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8));
 
             StringBuilder sb = new StringBuilder();
             for (int c; (c = in.read()) >= 0;)
@@ -193,6 +230,65 @@ public class ApproveDeposit {
         } catch (IOException e) {
             e.printStackTrace();
 
+        }
+    }
+
+    String depositAmount = PixDeposit.depositAmount;
+    String balanceBeforeDeposit = PixDeposit.balanceBefore;
+    String rolloverBeforeDeposit = PixDeposit.rolloverBefore;
+    String balanceAfterDeposit;
+    String rolloverAfterDeposit;
+
+    @Then("I check the balance after deposit")
+    public void checkTheBalance(){
+        //Go to fundHistory
+        Actions.goToFundHistory();
+
+        //Get the balance and rollover
+        balanceAfterDeposit = steps.frontend.Actions.getBalance();
+        rolloverAfterDeposit = steps.frontend.Actions.getRollover();
+
+        //Balance computation
+        BigDecimal deposit_Amount = new BigDecimal(depositAmount);
+        BigDecimal balanceBefore = new BigDecimal(balanceBeforeDeposit);
+
+        BigDecimal balanceAfter = new BigDecimal(balanceAfterDeposit);
+        BigDecimal expectedBalanceAfterDeposit = balanceBefore.add(deposit_Amount);
+
+        //Rollover computation
+        BigDecimal rolloverBefore = new BigDecimal(rolloverBeforeDeposit);
+        BigDecimal rolloverAfter = new BigDecimal(rolloverAfterDeposit);
+        BigDecimal rolloverMultiplier = new BigDecimal(deposit_rollover_multiplier);
+
+        //deposit amount multiply by deposit_rollover_multiplier
+        BigDecimal computedRollover = deposit_Amount.multiply(rolloverMultiplier);
+
+        //computed rollover plus rollover before deposit
+        BigDecimal expectedRolloverAfterDeposit = rolloverBefore.add(computedRollover);
+
+        if(expectedBalanceAfterDeposit.equals(balanceAfter)  && (expectedRolloverAfterDeposit.equals(rolloverAfter))){
+            Assert.assertEquals(expectedBalanceAfterDeposit, balanceAfter);
+            System.out.println("Deposit amount: " + depositAmount +
+                    "\nBalance before:" + balanceBeforeDeposit +
+                    "\nBalance after: " + balanceAfterDeposit);
+
+            Assert.assertEquals(expectedBalanceAfterDeposit, balanceAfter);
+            System.out.println("The balance and rollover are both tally." +
+                    "\nRollover multiplier: " + deposit_rollover_multiplier +
+                    "\nComputed rollover: " + computedRollover +
+                    "\nRollover before: " + rolloverBeforeDeposit +
+                    "\nRollover after: " + rolloverAfterDeposit);
+
+        } else {
+            System.out.println("Either the balance or the rollover is not tally."+
+                    "\nDeposit amount: " + depositAmount +
+                    "\nBalance before:" + balanceBeforeDeposit +
+                    "\nBalance after: " + balanceAfterDeposit +
+
+                    "\nRollover multiplier: " + deposit_rollover_multiplier +
+                    "\nComputed rollover: " + computedRollover +
+                    "\nRollover before: " + rolloverBeforeDeposit +
+                    "\nRollover after: " + rolloverAfterDeposit);
         }
     }
 }
